// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Icon InlineIcon 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c2 {
  position: absolute;
  top: 0;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  position: relative;
  height: 1em;
  width: 1.25em;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <p
      style={
        Object {
          "fontSize": "1em",
        }
      }
    >
      @
      1
      em:  
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="accessTime"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="add"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="addCircleOutline"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="arrowForward"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="block"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          className="c2"
          focusable={false}
          height="1.25em"
          icon="loading"
          title={null}
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-1"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stopColor="currentColor"
                stopOpacity="0"
              />
              <stop
                offset="63.146%"
                stopColor="currentColor"
                stopOpacity=".631"
              />
              <stop
                offset="100%"
                stopColor="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-1)"
                strokeWidth="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style={
        Object {
          "fontSize": "2em",
        }
      }
    >
      @
      2
      em:  
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="accessTime"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="add"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="addCircleOutline"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="arrowForward"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="block"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          className="c2"
          focusable={false}
          height="1.25em"
          icon="loading"
          title={null}
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-2"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stopColor="currentColor"
                stopOpacity="0"
              />
              <stop
                offset="63.146%"
                stopColor="currentColor"
                stopOpacity=".631"
              />
              <stop
                offset="100%"
                stopColor="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-2)"
                strokeWidth="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style={
        Object {
          "fontSize": "3em",
        }
      }
    >
      @
      3
      em:  
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="accessTime"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="add"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="addCircleOutline"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="arrowForward"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="block"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          className="c2"
          focusable={false}
          height="1.25em"
          icon="loading"
          title={null}
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-3"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stopColor="currentColor"
                stopOpacity="0"
              />
              <stop
                offset="63.146%"
                stopColor="currentColor"
                stopOpacity=".631"
              />
              <stop
                offset="100%"
                stopColor="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-3)"
                strokeWidth="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
    <p
      style={
        Object {
          "fontSize": "4em",
        }
      }
    >
      @
      4
      em:  
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="accessTime"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
          <path
            d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="add"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="addCircleOutline"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="arrowForward"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          aria-hidden={true}
          className="c2"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="1.25em"
          icon="block"
          size="1.25em"
          title={null}
          viewBox="0 0 24 24"
          width="1.25em"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
          />
        </svg>
      </span>
      <span
        className="c1"
      >
        <svg
          className="c2"
          focusable={false}
          height="1.25em"
          icon="loading"
          title={null}
          viewBox="0 0 38 38"
          width="1.25em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <defs>
            <linearGradient
              id="random-id-4"
              x1="8.042%"
              x2="65.682%"
              y1="0%"
              y2="23.865%"
            >
              <stop
                offset="0%"
                stopColor="currentColor"
                stopOpacity="0"
              />
              <stop
                offset="63.146%"
                stopColor="currentColor"
                stopOpacity=".631"
              />
              <stop
                offset="100%"
                stopColor="currentColor"
              />
            </linearGradient>
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(1 1)"
            >
              <path
                d="M36 18c0-9.94-8.06-18-18-18"
                id="Oval-2"
                stroke="url(#random-id-4)"
                strokeWidth="2"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </path>
              <circle
                cx="36"
                cy="18"
                fill="currentColor"
                r="1"
              >
                <animateTransform
                  attributeName="transform"
                  dur="0.9s"
                  from="0 18 18"
                  repeatCount="indefinite"
                  to="360 18 18"
                  type="rotate"
                />
              </circle>
            </g>
          </g>
        </svg>
      </span>
    </p>
  </div>
</div>
`;

exports[`Storyshots Icon With a color 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #cc1439;
  min-width: 24px;
}

.c2 {
  color: #ffbb00;
  min-width: 24px;
}

.c3 {
  color: #008059;
  min-width: 24px;
}

.c4 {
  color: #216beb;
  min-width: 24px;
}

.c5 {
  color: #122b47;
  min-width: 24px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c1"
        color="#cc1439"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="#cc1439"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="#cc1439"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="#cc1439"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="#cc1439"
        fill="#cc1439"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c1"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-5"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="#cc1439"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="#cc1439"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="#cc1439"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-5)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#cc1439"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="#ffbb00"
        fill="#ffbb00"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="#ffbb00"
        fill="#ffbb00"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="#ffbb00"
        fill="#ffbb00"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="#ffbb00"
        fill="#ffbb00"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="#ffbb00"
        fill="#ffbb00"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c2"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-6"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="#ffbb00"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="#ffbb00"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="#ffbb00"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-6)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#ffbb00"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="#008059"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="#008059"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="#008059"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="#008059"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="#008059"
        fill="#008059"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c3"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-7"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="#008059"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="#008059"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="#008059"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-7)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#008059"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c4"
        color="#216beb"
        fill="#216beb"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c4"
        color="#216beb"
        fill="#216beb"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c4"
        color="#216beb"
        fill="#216beb"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c4"
        color="#216beb"
        fill="#216beb"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c4"
        color="#216beb"
        fill="#216beb"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c4"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-8"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="#216beb"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="#216beb"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="#216beb"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-8)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#216beb"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c5"
        color="#122b47"
        fill="#122b47"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c5"
        color="#122b47"
        fill="#122b47"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c5"
        color="#122b47"
        fill="#122b47"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c5"
        color="#122b47"
        fill="#122b47"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c5"
        color="#122b47"
        fill="#122b47"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c5"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-9"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="#122b47"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="#122b47"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="#122b47"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-9)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="#122b47"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With a size 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: currentColor;
  min-width: 8px;
}

.c2 {
  color: currentColor;
  min-width: 16px;
}

.c3 {
  color: currentColor;
  min-width: 24px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c1"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="8px"
        icon="accessTime"
        size="8px"
        title={null}
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="8px"
        icon="add"
        size="8px"
        title={null}
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="8px"
        icon="addCircleOutline"
        size="8px"
        title={null}
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="8px"
        icon="arrowForward"
        size="8px"
        title={null}
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c1"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="8px"
        icon="block"
        size="8px"
        title={null}
        viewBox="0 0 24 24"
        width="8px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c1"
        focusable={false}
        height="8px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="8px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-10"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="currentColor"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="currentColor"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-10)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="16px"
        icon="accessTime"
        size="16px"
        title={null}
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="16px"
        icon="add"
        size="16px"
        title={null}
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="16px"
        icon="addCircleOutline"
        size="16px"
        title={null}
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="16px"
        icon="arrowForward"
        size="16px"
        title={null}
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="16px"
        icon="block"
        size="16px"
        title={null}
        viewBox="0 0 24 24"
        width="16px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c2"
        focusable={false}
        height="16px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-11"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="currentColor"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="currentColor"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-11)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
    <div
      className=""
    >
      <svg
        aria-hidden={true}
        className="c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="accessTime"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
        <path
          d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="add"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="addCircleOutline"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M13 7h-2v4H7v2h4v4h2v-4h4v-2h-4V7zm-1-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="arrowForward"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </svg>
      <svg
        aria-hidden={true}
        className="c3"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="block"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
        />
      </svg>
      <svg
        className="c3"
        focusable={false}
        height="24px"
        icon="loading"
        title={null}
        viewBox="0 0 38 38"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <defs>
          <linearGradient
            id="random-id-12"
            x1="8.042%"
            x2="65.682%"
            y1="0%"
            y2="23.865%"
          >
            <stop
              offset="0%"
              stopColor="currentColor"
              stopOpacity="0"
            />
            <stop
              offset="63.146%"
              stopColor="currentColor"
              stopOpacity=".631"
            />
            <stop
              offset="100%"
              stopColor="currentColor"
            />
          </linearGradient>
        </defs>
        <g
          fill="none"
          fillRule="evenodd"
        >
          <g
            transform="translate(1 1)"
          >
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
              id="Oval-2"
              stroke="url(#random-id-12)"
              strokeWidth="2"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
            <circle
              cx="36"
              cy="18"
              fill="currentColor"
              r="1"
            >
              <animateTransform
                attributeName="transform"
                dur="0.9s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </circle>
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With accessibility title 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  padding: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  color: currentColor;
  min-width: 24px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="Box-sc-1qu1edy-0 c1"
    >
      <svg
        aria-hidden={false}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="user"
        size="24px"
        title="User account"
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
       This has a title attribute so it will be read by assistive devices.
    </div>
    <div
      className="Box-sc-1qu1edy-0 c1"
    >
      <svg
        aria-hidden={true}
        className="c2"
        color="currentColor"
        fill="currentColor"
        focusable={false}
        height="24px"
        icon="user"
        size="24px"
        title={null}
        viewBox="0 0 24 24"
        width="24px"
      >
        <path
          d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
        />
      </svg>
       This doesn't have a title attribute, so it has aria-hidden set true instead.
    </div>
  </div>
</div>
`;

exports[`Storyshots Icon With added margin 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  margin: 24px;
}

.c2 {
  background-color: #e4e7eb;
  margin: 24px;
}

.c3 {
  margin: 16px;
  color: currentColor;
  min-width: 24px;
}

.c4 {
  margin-top: 16px;
  color: currentColor;
  min-width: 24px;
}

.c5 {
  margin-right: 16px;
  color: currentColor;
  min-width: 24px;
}

.c6 {
  margin-bottom: 16px;
  color: currentColor;
  min-width: 24px;
}

.c7 {
  margin-left: 16px;
  color: currentColor;
  min-width: 24px;
}

.c8 {
  margin-left: 16px;
  margin-right: 16px;
  color: currentColor;
  min-width: 24px;
}

.c9 {
  margin-top: 16px;
  margin-bottom: 16px;
  color: currentColor;
  min-width: 24px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c3"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          m="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c4"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          mt="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c5"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          mr="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c6"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          mb="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c7"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          ml="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c8"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          mx="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
      <div
        className="c2"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <svg
          aria-hidden={true}
          className="c9"
          color="currentColor"
          fill="currentColor"
          focusable={false}
          height="24px"
          icon="delete"
          my="x2"
          size="24px"
          title={null}
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
